--- a/app/css/navbar.module.css
+++ b/app/css/navbar.module.css
@@ -154,11 +154,12 @@
   }
 
   .heroSubtitle {
-    font-size: 1rem;
+    font-size: 1.3rem;
   }
 
   .heroDescription {
     font-size: 0.95rem;
+    margin-top: -10px;
   }
 
   .navItem {
